LibreChat full backup: config, docker-compose, models setup

--- a/.env.example
+++ b/.env.example
@@ -785,3 +785,10 @@ OPENWEATHER_API_KEY=
 
 # Cache connection status checks for this many milliseconds to avoid expensive verification
 # MCP_CONNECTION_CHECK_TTL=60000
+OPENAI_API_KEY=sk-proj-
+OPENAI_MODELS=gpt-5
+GOOGLE_MODELS=gemini-2.5-pro
+ANTHROPIC_MODELS=claude-sonnet-4-5
+GROQ_MODELS=llama3-70b-8192
+ENABLE_PLUGINS=false
+# PLUGIN_MODELS=
