--- a/librechat.example.yaml
+++ b/librechat.example.yaml
@@ -27,7 +27,7 @@ cache: true
 
 # Custom interface configuration
 interface:
-  customWelcome: 'Welcome to LibreChat! Enjoy your experience.'
+  customWelcome: 'Velkommen til LibreChat! Ha en hyggelig opplevelse.'
   # Enable/disable file search as a chatarea selection (default: true)
   # Note: This setting does not disable the Agents File Search Capability.
   # To disable the Agents Capability, see the Agents Endpoint configuration instead.
@@ -42,44 +42,38 @@ interface:
     externalUrl: 'https://librechat.ai/tos'
     openNewTab: true
     modalAcceptance: true
-    modalTitle: 'Terms of Service for LibreChat'
+    modalTitle: 'Vilkår for bruk av LibreChat – eKommune Sunnmøre'
     modalContent: |
-      # Terms and Conditions for LibreChat
+      Velkommen til LibreChat er et internt verktøy for ansatte i eKommune Sunnmøre.
+      Ved å bruke tjenesten godtar du punktene under.
 
-      *Effective Date: February 18, 2024*
+      ## 1. Formål
 
-      Welcome to LibreChat, the informational website for the open-source AI chat platform, available at https://librechat.ai. These Terms of Service ("Terms") govern your use of our website and the services we offer. By accessing or using the Website, you agree to be bound by these Terms and our Privacy Policy, accessible at https://librechat.ai//privacy.
+      Tjenesten brukes kun til kommunale arbeidsoppgaver. Ikke privat bruk.
 
-      ## 1. Ownership
+      ## 2. Data og personvern
 
-      Upon purchasing a package from LibreChat, you are granted the right to download and use the code for accessing an admin panel for LibreChat. While you own the downloaded code, you are expressly prohibited from reselling, redistributing, or otherwise transferring the code to third parties without explicit permission from LibreChat.
+      Samtaler kan logges for drift og sikkerhet. Data behandles kun internt og deles ikke med tredjeparter. Data brukes aldri til modelltrening. Ikke send inn sensitive eller taushetsbelagte opplysninger.
 
-      ## 2. User Data
+      ## 3. Bruk
 
-      We collect personal data, such as your name, email address, and payment information, as described in our Privacy Policy. This information is collected to provide and improve our services, process transactions, and communicate with you.
+      Du skal bruke tjenesten lovlig og tjenstlig, kvalitetssikre innhold før bruk og ikke forsøke å omgå sikkerhetsmekanismer.
 
-      ## 3. Non-Personal Data Collection
+      ## 4. Ansvar
 
-      The Website uses cookies to enhance user experience, analyze site usage, and facilitate certain functionalities. By using the Website, you consent to the use of cookies in accordance with our Privacy Policy.
+      Tjenesten leveres "som den er". eKommune Sunnmøre er ikke ansvarlig for feil eller konsekvenser av bruk.
 
-      ## 4. Use of the Website
+      ## 5. Endringer
 
-      You agree to use the Website only for lawful purposes and in a manner that does not infringe the rights of, restrict, or inhibit anyone else's use and enjoyment of the Website. Prohibited behavior includes harassing or causing distress or inconvenience to any person, transmitting obscene or offensive content, or disrupting the normal flow of dialogue within the Website.
+      Vilkår og funksjoner kan endres og kunngjøres via interne kanaler.
 
-      ## 5. Governing Law
+      ## 6. Lovvalg
 
-      These Terms shall be governed by and construed in accordance with the laws of the United States, without giving effect to any principles of conflicts of law.
+      Reguleres av norsk lov.
 
-      ## 6. Changes to the Terms
+      ## 7. Kontakt
 
-      We reserve the right to modify these Terms at any time. We will notify users of any changes by email. Your continued use of the Website after such changes have been notified will constitute your consent to such changes.
-
-      ## 7. Contact Information
-
-      If you have any questions about these Terms, please contact us at contact@librechat.ai.
-
-      By using the Website, you acknowledge that you have read these Terms of Service and agree to be bound by them.
-
+      it-support@alesund.kommune.no
   endpointsMenu: true
   modelSelect: true
   parameters: true
